<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm_app">Alarm App</string>
    <string name="choose">Set Time for Alarm</string>
    <string name="alrm1">Alarm 1</string>
    <string name="alrm2">Alarm 2</string>
    <string name="setTime">Set Time</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
</resources>